[package]
name = "bridge_actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fvm_sdk = { version = "0.5.0", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_shared = { version = "0.5.1", git = "https://github.com/filecoin-project/ref-fvm" }
fvm_ipld_blockstore = "0.1.0"
fvm_ipld_encoding = "0.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
bls12_381 = {version = "0.6", default-features = false, features = ["experimental", "groups", "pairings"]}
hex = "0.4.3"  
sha2_256 = {version = "0.9" ,package = "sha2"}
ethabi = "17.0.0"  
getrandom = { version = "0.2", features = ["custom"]  }
sha256 = "1.0.3" 
ic-cdk = "0.3"
libc = "0.2"
byteorder = "1.4.3" 

[dev-dependencies]
fvm = { version = "0.5.1", git = "https://github.com/filecoin-project/ref-fvm" }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"